<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Zeelo Books</string>
    <string name="add_book">New Book</string>
    <string name="edit_book">Edit Book</string>
    <string name="book_marked_favorite">Book marked as favorite</string>
    <string name="book_removed_favorite">Book removed from favorites</string>
    <string name="loading_books_error">Error while loading books</string>
    <string name="favorite_books_cleared">Favorite books cleared</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_clear">Clear favorites</string>
    <string name="menu_delete_book">Delete book</string>
    <string name="navigation_view_header_title"> Zeelo Books</string>
    <string name="title_hint">Title</string>
    <string name="description_hint">Enter the book description here.</string>
    <string name="empty_book_message">Book name cannot be empty</string>
    <string name="successfully_saved_book_message">Book saved</string>
    <string name="list_title">Book List</string>
    <string name="statistics_title">About</string>
    <string name="statistics_no_books">You have no books.</string>
    <string name="statistics_not_fav_books">Not favorite books: %d</string>
    <string name="statistics_favorite_books">Favorite books: %d</string>
    <string name="statistics_error">Error loading statistics.</string>
    <string name="no_data">No data</string>
    <string name="loading">LOADING</string>

    <string-array name="list_books_array">
        <item>@string/nav_all</item>
        <item>@string/nav_not_fav</item>
        <item>@string/nav_favorite</item>
    </string-array>
    <string name="nav_all">All</string>
    <string name="nav_not_fav">Not Favorite</string>
    <string name="nav_favorite">Favorite</string>
    <string name="label_all">All Books</string>
    <string name="label_not_fav">Not Favorite Books</string>
    <string name="label_favorite">Favorite Books</string>
    <string name="no_books_all">You have no Books!</string>
    <string name="no_books_not_fav">All you book are in your favorites!</string>
    <string name="no_books_favorite">You have no favorite Books!</string>
    <string name="no_books_add">Add a Book item +</string>
    <string name="refresh">Refresh</string>
    <string name="successfully_deleted_book_message">Book was deleted</string>
    <string name="successfully_added_book_message">Book added</string>
    <string name="no_data_description"/>

</resources>
