...
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:visibility="@{viewmodel.dataLoading ? View.GONE : View.VISIBLE}">

                <EditText
                    android:id="@+id/add_book_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title_hint"
                    android:maxLines="1"
                    android:text="@={viewmodel.title}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

                <EditText
                    android:id="@+id/add_book_description"
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:gravity="top"
                    android:hint="@string/description_hint"
                    android:text="@={viewmodel.description}"/>

...
